--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,11 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-devtools')
+	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+   	compile 'org.hibernate:hibernate-core'
+   	compile 'javax.servlet:javax.servlet-api'
+   	compile 'org.javassist:javassist'
+   	compile 'commons-dbcp:commons-dbcp'
 		
 	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
