--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-devtools')
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-   	compile 'org.hibernate:hibernate-core'
-   	compile 'javax.servlet:javax.servlet-api'
-   	compile 'org.javassist:javassist'
-   	compile 'commons-dbcp:commons-dbcp'
+	compile 'com.microsoft.sqlserver:mssql-jdbc:6.5.0.jre8-preview'
 		
 	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
